--- a/comp1073.html
+++ b/comp1073.html
@@ -20,6 +20,7 @@
         <button id="anmol">Jessica</button>        
         <button id="alp">Alp</button>
         <button id="chris">Chris></button>
+        <button id="lei">Lei</button>
       </main>
     </div><!--end container--> 
   </body>
