--- a/comp1073.html
+++ b/comp1073.html
@@ -17,7 +17,7 @@
       <main>
        <h2> Hello COMP1073! </h2>
         <button id="jess">Jessica</button>
-        <button id="anmol">Jessica</button>        
+        <button id="anmol">Anmol</button>        
         <button id="alp">Alp</button>
         <button id="chris">Chris></button>
         <button id="lei">Lei</button>
